--- a/index.html
+++ b/index.html
@@ -6,174 +6,170 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hi!</title>
     <link href="Hi!_files/bootstrap.min.css" rel="stylesheet">
-    <style>
+<style>
+    body {
+        margin: 0;
+        padding: 0;
+        font-size: 14px;
+        background-color: #fff;
+        color: #000;
+        text-align: center;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: flex-start;
+        height: 100vh;
+        transition: all 0.5s ease;
+        padding: 10px;
+    }
+
+    .container {
+        width: 90%;
+        max-width: 800px;
+        padding: 15px;
+        text-align: justify;
+        margin-top: 20px;
+    }
+
+    .container p {
+        margin-bottom: 1em;
+    }
+
+    .container img {
+        display: block;
+        margin: 0 auto;
+        width: 100%;
+        max-width: 600px;
+        height: auto;
+    }
+
+    .toggles {
+        position: fixed;
+        top: 50%;
+        left: 5px;
+        transform: translateY(-50%);
+        display: flex;
+        flex-direction: column;
+        gap: 5px;
+        z-index: 10;
+        overflow-x: auto;
+        white-space: nowrap;
+        width: 100%;
+    }
+
+    .toggle-container {
+        display: inline-block;
+        align-items: center;
+        gap: 3px;
+    }
+
+    .toggle {
+        width: 25px;
+        height: 12px;
+        background: #ccc;
+        border-radius: 10px;
+        position: relative;
+        cursor: pointer;
+    }
+
+    .toggle:before {
+        content: '';
+        width: 10px;
+        height: 10px;
+        background: white;
+        position: absolute;
+        top: 1px;
+        left: 2px;
+        border-radius: 50%;
+        transition: 0.3s;
+    }
+
+    .toggle.active {
+        background: #4CAF50;
+    }
+
+    .toggle.active:before {
+        left: 13px;
+    }
+
+    .toggle-label {
+        font-size: 10px;
+    }
+
+    .movie-quotes {
+        position: fixed;
+        bottom: 5px;
+        right: 5px;
+        font-size: 8px;
+        text-align: right;
+        width: 20%;
+        max-height: 50vh;
+        overflow-y: auto;
+        word-wrap: break-word;
+    }
+
+    .footer {
+        position: fixed;
+        bottom: 5px;
+        left: 5px;
+        font-size: 8px;
+    }
+
+    /* Responsive Styles */
+    @media (max-width: 1024px) {
         body {
-            margin: 0;
-            padding: 0;
-            font-size: 14px;
-            background-color: #fff;
-            color: #000;
-            text-align: left;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: flex-start;
-            height: 100vh;
-            transition: all 0.5s ease;
+            font-size: 12px;
         }
 
         .container {
-            width: 100%;
             padding: 10px;
-            text-align: justify;
-            margin-top: 20px;
-        }
-
-        .container p {
-            margin-bottom: 1em;
-        }
-
-        .container img {
-            display: block;
-            margin-left: auto;
-            margin-right: auto;
-            width: 80%;
-            height: auto;
         }
 
         .toggles {
-            position: fixed;
-            top: 50%;
-            left: 5px;
-            transform: translateY(-50%);
-            display: flex;
-            flex-direction: column;
-            gap: 3px;
-            z-index: 10;
-            overflow-x: auto; /* Enable horizontal scroll */
-            white-space: nowrap; /* Prevent wrapping */
-            width: 100%; /* Ensure it uses the full width */
+            top: 10px;
+            left: 10px;
+            flex-direction: row;
+            gap: 10px;
         }
 
         .toggle-container {
-            display: inline-block;
-            align-items: center;
-            gap: 3px;
-        }
-
-        .toggle {
-            width: 25px;
-            height: 12px;
-            background: #ccc;
-            border-radius: 10px;
-            position: relative;
-            cursor: pointer;
-        }
-
-        .toggle:before {
-            content: '';
-            width: 10px;
-            height: 10px;
-            background: white;
-            position: absolute;
-            top: 1px;
-            left: 2px;
-            border-radius: 50%;
-            transition: 0.3s;
-        }
-
-        .toggle.active {
-            background: #4CAF50;
-        }
-
-        .toggle.active:before {
-            left: 13px;
-        }
-
-        .toggle-label {
             font-size: 10px;
         }
 
         .movie-quotes {
-            position: fixed;
-            bottom: 5px;
-            right: 5px;
-            font-size: 8px;
-            text-align: right;
-            width: 20%;
-            max-height: 50vh;
-            overflow-y: auto;
-            word-wrap: break-word;
+            font-size: 6px;
+            width: 40%;
         }
 
         .footer {
-            position: fixed;
-            bottom: 5px;
-            left: 5px;
-            font-size: 8px;
+            font-size: 7px;
+        }
+    }
+
+    @media (max-width: 600px) {
+        body {
+            font-size: 10px;
         }
 
-        /* Responsive Styles */
-        @media (max-width: 1024px) {
-            body {
-                font-size: 12px;
-            }
-
-            .container {
-                padding: 5px;
-            }
-
-            .toggles {
-                top: 10px;
-                left: 10px;
-                flex-direction: row;
-                gap: 10px;
-            }
-
-            .toggle-container {
-                font-size: 10px;
-            }
-
-            .movie-quotes {
-                font-size: 6px;
-                width: 40%;
-            }
-
-            .footer {
-                font-size: 7px;
-            }
+        .container {
+            padding: 5px;
         }
 
-        @media (max-width: 600px) {
-            body {
-                font-size: 10px;
-            }
-
-            .container {
-                padding: 3px;
-            }
-
-            .toggles {
-                top: 10px;
-                left: 10px;
-                flex-direction: row;
-                gap: 5px;
-            }
-
-            .toggle-container {
-                font-size: 8px;
-            }
-
-            .movie-quotes {
-                font-size: 5px;
-                width: 100%;
-            }
-
-            .footer {
-                font-size: 6px;
-            }
+        .toggles {
+            display: none; /* Hide toggle switches on mobile */
         }
-    </style>
+
+        .movie-quotes {
+            font-size: 5px;
+            width: 100%;
+        }
+
+        .footer {
+            font-size: 6px;
+        }
+    }
+</style>
+
 </head>
 <body>
     <div class="container">
@@ -251,3 +247,4 @@
     </script>
 </body>
 </html>
+
