--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         width: 90%;
         max-width: 800px;
         padding: 15px;
-        text-align: justify;
+        text-align: center;
         margin-top: 20px;
     }
 
