--- a/index.html
+++ b/index.html
@@ -54,16 +54,18 @@
         z-index: 10;
         overflow-x: auto;
         white-space: nowrap;
-        width: 100%;
+        width: auto;
     }
 
- .toggle-container {
+    .toggle-container {
         display: flex;
         align-items: center;
         gap: 5px;
-        white-space: nowrap; /* Ensures labels don't break */
+        background: rgba(255, 255, 255, 0.8);
+        padding: 5px;
+        border-radius: 5px;
     }
-    
+
     .toggle {
         width: 25px;
         height: 12px;
@@ -95,9 +97,9 @@
 
     .toggle-label {
         font-size: 12px;
-        color: #000; /* Ensure it's visible */
+        white-space: nowrap;
     }
-    
+
     .movie-quotes {
         position: fixed;
         bottom: 5px;
@@ -171,6 +173,7 @@
         }
     }
 </style>
+
 
 </head>
 <body>
