--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hi!</title>
     <link href="Hi!_files/bootstrap.min.css" rel="stylesheet">
+
 <style>
     body {
         margin: 0;
@@ -37,144 +38,11 @@
 
     .container img {
         display: block;
-        margin: 0 auto;
-        width: 100%;
-        max-width: 600px;
-        height: auto;
-    }
-
-    .toggles {
-        position: fixed;
-        top: 50%;
-        left: 5px;
-        transform: translateY(-50%);
-        display: flex;
-        flex-direction: column;
-        gap: 5px;
-        z-index: 10;
-        overflow-x: auto;
-        white-space: nowrap;
-        width: auto;
-    }
-
-    .toggle-container {
-        display: flex;
-        align-items: center;
-        gap: 5px;
-        background: rgba(255, 255, 255, 0.8);
-        padding: 5px;
-        border-radius: 5px;
-    }
-
-    .toggle {
-        width: 25px;
-        height: 12px;
-        background: #ccc;
-        border-radius: 10px;
-        position: relative;
-        cursor: pointer;
-    }
-
-    .toggle:before {
-        content: '';
-        width: 10px;
-        height: 10px;
-        background: white;
-        position: absolute;
-        top: 1px;
-        left: 2px;
-        border-radius: 50%;
-        transition: 0.3s;
-    }
-
-    .toggle.active {
-        background: #4CAF50;
-    }
-
-    .toggle.active:before {
-        left: 13px;
-    }
-
-    .toggle-label {
-        font-size: 12px;
-        white-space: nowrap;
-    }
-
-    .movie-quotes {
-        position: fixed;
-        bottom: 5px;
-        right: 5px;
-        font-size: 8px;
-        text-align: right;
-        width: 20%;
-        max-height: 50vh;
-        overflow-y: auto;
-        word-wrap: break-word;
-    }
-
-    .footer {
-        position: fixed;
-        bottom: 5px;
-        left: 5px;
-        font-size: 8px;
-    }
-
-    /* Responsive Styles */
-    @media (max-width: 1024px) {
-        body {
-            font-size: 12px;
-        }
-
-        .container {
-            padding: 10px;
-        }
-
-        .toggles {
-            top: 10px;
-            left: 10px;
-            flex-direction: row;
-            gap: 10px;
-        }
-
-        .toggle-container {
-            font-size: 10px;
-        }
-
-        .movie-quotes {
-            font-size: 6px;
-            width: 40%;
-        }
-
-        .footer {
-            font-size: 7px;
-        }
-    }
-
-    @media (max-width: 600px) {
-        body {
-            font-size: 10px;
-        }
-
-        .container {
-            padding: 5px;
-        }
-
-        .toggles {
-            display: none; /* Hide toggle switches on mobile */
-        }
-
-        .movie-quotes {
-            font-size: 5px;
-            width: 100%;
-        }
-
-        .footer {
-            font-size: 6px;
-        }
-    }
-</style>
+        margin: 
 
 
+
+    
 </head>
 <body>
     <div class="container">
