--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Themed Page</title>
+    <title>Digital Artist</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <style>
@@ -193,7 +193,7 @@
 </head>
 <body class="default-theme">
     <div class="header">
-        <h3>Themed Page</h3>
+        <h3>Portfolio</h3>
         <span class="hamburger" onclick="toggleMenu()">&#9776;</span>
     </div>
 
@@ -214,12 +214,12 @@
     </div>
 
     <div class="container">
-        <h3>Digital Artist from SCL</h3>
+        
         <img src="00000000000000.PNG" alt="Text Based CV Project">
-        <p>Former teaching assistant in Pure Data software in Sound Art Diploma at U. de Chile, where I wrote about concrete music and the futurist manifesto.<br>&nbsp;</p>
+        <p>Digital Media Artist from Santiago de Chile. Former teaching assistant in Pure Data software in Sound Art Diploma at U. de Chile, where I wrote about concrete music and the futurist manifesto.<br>&nbsp;</p>
         <p>Currently working on Computer Vision and text-based applications.<br>&nbsp;</p>
         <p>More? Listen to the <a href="https://labalahumana.bandcamp.com/" target="_blank">bandcamp</a> site.<br> , or contact me for projects at <a href="mailto:sakayama666@icloud.com" id="email">sakayama666@icloud.com</a></p>
-        <p>... and go to the apps <a href="demo.html">page</a> where you can find all demo apps from app1 to app9.</p>
+        <p>... and go to the apps <a href="demo.html">page</a> .</p>
     </div>
 
     <div class="footer">
